--- a/math.org
+++ b/math.org
@@ -107,20 +107,50 @@
   生了，在众多原因B_i中到底由哪个导致，贝叶斯公式可以给出度量，类似于发生了某个案件A，在不了解案情前，嫌疑人B_i根据以往
   的记录其作案的概率为P(B_i)，但是如果了解了A案情，则P(B_i)就会变动了；贝叶斯公式如下：在全概率假定下有   
   $$P(B|A) = \frac{P(AB_{i})}{P(A)} = \frac{P(B_{i})P(A|B_{i})}{\sum_{j}P(B_{j})P(A|B_{j})}$$
-- 
+- 期望值：也称均值，$\overline{X} = \frac{\sum_{i=1}^{n} X_{i}}{n}$, 如果知道每个点x的概率f(x)，则可以写为 $E(X) = \sum
+  x_{k}f(x_{x})$, 描述的是样本集合的中间点，平均值；
+- 方差：标准差为方差的开方，令u=E(X)为均值，定义X的方差Var(X)=E((X-u)^2)=E(X^2)-u^2, 另外还可以这样计算，方差
+  $V^{2}=\frac{\sum_{i=1}^{n}(X_{i}-\overline{X})}{n-1}$ , 描述了各个点x相对于均值的离散度；
+- 协方差：期望值和方差一般用来描述一维的数据，但是当两个,多个随机变量可能存在一定关系时, 比如男孩的猥琐程度和受女孩子喜
+  欢的程度，就需要协方差来衡量，方差只可能为非负，但是协方差可以为正、0、负，从而引出了正相关、相互独立、负相关，如果协
+  方差为正，代表男孩越猥琐越受欢迎，如果为负代表男孩越猥琐越不受欢迎，如果为0代表两者无关。协方差的定义公式类似方差
+  $cov(X,Y) = \frac{\sum_{i=1}^{n}(X_{i}-\overline{X})(Y_{i}-\overline{Y})}{n-1}$; 如果面对多维的情况时，协方差也没法独
+  自描述，这时就需要协方差矩阵进行描述矩阵的元素为两两随机变量的协方差，比如数据集有{x，y，z}三个维度情况; 
+#<<math-relevance>>
+- 总体线性相关系数: X和Y的总体线性相关系数,其中Var(X)，Var(Y)为X,Y的方差，Cov(X, Y)为X和Y的协方差； 
+  $$ \rho = \frac{Cov(X,Y)}{\sqrt{Var(X)Var(Y)}}$$
+- 样本线性相关系数: X和Y的样本线性相关系数，其中X_i和Y_i分别是变量X和Y的样本观测值， $\overline{X}, \overline{Y}$ 分别是
+  变量X和Y样本值的平均值；
+  $$ r_{XY}=\frac{\sum(X_{i}-\overline{X})(Y_{i}-\overline{Y})}{\sqrt{\sum(X_{i}-\overline{X})^{2}\sum(Y_{i}-\overline{Y})^{2}}}$$
+- 条件分布：当被解释量X取某固定值时(条件)，Y的值不确定，Y的不同取值形成一定的分布，这就是Y的分布；
+- 条件概率：X取某固定值时，Y取不同值的概率称为条件概率；
+- 条件期望：对于X的每个取值，对Y所形成的分布确定其期望或者均值，称为Y的条件期望或条件均值，用E(Y|X_i)表示, 见图\ref{img-cond-exp}所示；
+- 回归线：对于每个X的取值X_i, 都有Y的条件期望E(Y|X_i)与之对应，代表Y的条件期望的点的轨迹形成的直线或者曲线称为回归线, 见
+  图\ref{img-cond-exp}所示；
+  #+label: img-cond-exp
+  #+attr_latex: placement=[H]
+  [[./img/cond-exp-plot.jpg]]
+- 回归函数：被解释变量Y的条件期望E(Y|X_i)随解释变量X的变化而有规律的变化，如果把Y的条件期望表现为X的如下函数，这个函数称
+  为回归函数, 回归函数又分为总体回归函数和样本回归函数；$$ E(Y|X_{i}) = f(X_{i})$$
+- 残差：也叫剩余值，residual，表示实际值Y与回归线上的估计值Y'的纵向距离Y-Y', 一般Y'用E(Y)；
+- 无偏估计：用期望值来阐述，对于一个总体空间的期望值为U，由于各种原因没办法或者不方便获得这个期望值参数U，但是我们可以通
+  过总体空间的一个样本空间的u来估计总体空间的U，一般情况下u是不等于U的，但是总体空间可以划分出若干多个样本空间，也就可以
+  获得多个u，对于这么多个u，其实也是一个随机变量，如果这个随机变量的期望值等于总体空间的U，则可以说对我们划分的样本空间，
+  可以对总体空间的期望值做无偏估计；官方语言组织叫，参数的样本估计值的期望值等于参数的真实值。估计量的数学期望等于被估计
+  参数，则称此为无偏估计 ；
 
 ** 排列组合
 - 排列：n个相异事物取r个(1<=r<=n)的不同排列总数，为$P_{r}^{n} = n(n-1)(n-2)...(n-r+1)$ , 如果r=n，则$P_{r}^{r} = r!$
 - 组合：n个相异物件取r个(1<=r<=n)的不同组合总数，为$C_{r}^{n}=\frac{P_{r}^{n}}{r!}=\frac{n!}{r!(n-r)!}}$
 - 0!=1; 
-* 概率分布
-** 离散分布
-*** 01分布
+** 概率分布
+*** 离散分布
+**** 01分布
 随机变量X只能取0和1两个值，取0和1的概率分布是p，q，p+q=1
-*** 二项分布
+**** 二项分布
 - 定义：服从二项分布的随机变量X表示在n个独立的是/非试验中成功的次数i，其中每次试验的成功概率为p
   $$ p_{i} = C_{n}^{i}p^{i}(1-p)^{n-i},i=0, 1, ..., n $$
-**** python实现
+***** python实现
 #+begin_src python
 from scipy import stats         #倒入工具包
 import numpy as np
@@ -138,12 +168,12 @@ plt.ylabel('probability of k')  #y轴是k次的概率
 plt.show()                      #显示出来
 #+end_src
 
-*** 伯努利分布
-*** 泊松分布
-*** 几何分布
-** 连续分布
-*** 正太分布
-*** 指数分布
-*** \beta分布
+**** 伯努利分布
+**** 泊松分布
+**** 几何分布
+*** 连续分布
+**** 正太分布
+**** 指数分布
+**** \beta分布
   
 
