--- a/os.org
+++ b/os.org
@@ -361,6 +361,28 @@ menu标签中item标签的主要属性见表\ref{tbl-menu-bar}
 | android:icon            | item显示的图标。                                           |
 | app:showAsAction        | item显示的方式。                                           |
 |-------------------------+------------------------------------------------------------|
+** gps
+*** 组件
+- LocationManagerService：简称LMS，统一管理android平台中能够提供位置服务的相关模块；
+- LocationManager：简称LM，为需要使用位置服务的应用程序服务，LMS和LM通过binder进行交互；
+- LocationProvider：简称LP，表示android平台中能够提供位置服务的相关模块的统称，在所有位置提供者中，android framework实现
+  了其中的PassiveProvider和GpsLocationProvider，这两个LP由LMS创建并允许在系统进程中；
+- LocationProviderInterface：LP必须实现这个接口，这些接口对应的对象实例由LMS来创建和管理；
+- NetworkLocationProvider：由网络提供的位置服务，android原生代码中不提供相关功能，一般第三方厂商会提供；
+- GMS：GoogleMobileService，由Google提供的NetworkLocationProvider，国内的一般由百度提供；
+- ILocationProviderProxy：由于一些LP是由第三方提供，他们运行在应用程序所在的进程中，所以系统定了这个接口使LMS管理这些由
+  应用程序提供的位置服务；
+- LocationProviderBase：第三方提供LP，必须实现这个抽象类；
+- FusedLocationProvider：它自身不提供位置信息，而是综合GpsLP和NetworkLP的位置信息，然后向使用者提供最符合使用者需求的数
+  据，平衡电量消耗和数据精度要求；
+- GeocodeProxy：由于需要将位置信息和地址相互转换，而有些位置信息由第三方提供，所以LMS利用这个和第三方应用中实现
+  GeocodeProxy的对象进行交互。
+*** 操作
+1. 先创建一个LocationManager对象，用于和LMS交互；
+2. 然后调用LocationManager的requestLocationUpdates以设置一个回调接口对象LocationListener，同时指出要使用哪个LP，或者指定
+   定位精度，由系统决定选择LP；
+3. 当LP更新相关信息后，LocationListener对应的函数将被调用，应用程序可以在这些回调函数中做相应处理；
+4. 如果应用程序需要在位置和地址信息做转换，则使用Geocoder类提供的函数；
 * FreeRTOS
 FreeRTOS是一个迷你操作系统内核的小型嵌入式系统。作为一个轻量级的操作系统，功能包括：任务管理、时间管理、信号量、消息队列、
 内存管理、记录功能等，可基本满足较小系统的需要。 功能和特点:
