--- a/index.org
+++ b/index.org
@@ -6,7 +6,7 @@
 * [[./math.org][数学]]
 汇总工作中需要用到数学知识。
 * [[./algorithm.org][算法]]
-总结各种机器学习,数据挖掘等的理念、工具、算法等。
+总结各种机器学习,数据挖掘等的理念、工具、算法等, 以及数字图像处理知识。
 * [[./protocol.org][协议]]
 总结工作中遇到的各种协议，包括大族协议，小族协议等。
 * [[./software.org][软件]]
