修改错误的字符

--- a/math.org
+++ b/math.org
@@ -98,13 +98,13 @@
 - 互斥时间和的概率：等于各事件概率的和： $P(A_{1}+A_{2}+...+A_{n}) = P(A_{1})+P(A_{2})+...+P(A_{n})$
 - 对立事件A的概率：$P(\overline{A}) = 1 - P(A)$
 - 独立事件的概率：若干个独立事件 $A_{1},...,A_{n}$ 之积的概率，等于各事件概率的乘积：$P(A_{1}...A_{n}) = P(A_{1})...P(A_{n})$
-- 全概率：其意义在于在校复杂的情况下直接计算A事件概率P(A)不容易，但是A事件总是随某个B_i发生，则适当去构造这组B_i可以简化
-  计算。其公式如下，其中用到了条件概率公式, 此公式还能从另一个角度去理解，把B_i看做导致事件A发生的一种可能途径，对不同途
+- 全概率：其意义在于在较复杂的情况下直接计算A事件概率P(A)不容易，但是A事件总是随某个B_{i}发生，则适当去构造这组B_{i}可以简化
+  计算。其公式如下，其中用到了条件概率公式, 此公式还能从另一个角度去理解，把B_{i}看做导致事件A发生的一种可能途径，对不同途
   径，A发生的概率即条件概率P(A|B)各不同，而采取哪个途径却是随机的。 
   $$ P(A)=P(AB_{1})+...+P(AB_{n}) = P(B_{1})P(A|B_{1})+...+P(B_{n})P(A|B_{n}) $$
-- 贝叶斯公式：刻画了一些事件B_i其原有发生概率在事件A引入的条件下B_i的概率发生了改变；如果把事件A看成结果，把诸事件B_i看
+- 贝叶斯公式：刻画了一些事件B_{i}其原有发生概率在事件A引入的条件下B_{i}的概率发生了改变；如果把事件A看成结果，把诸事件B_{i}看
   成导致结果A的可能原因，则全概率公式可以看做为“由原因推结果”，而贝叶斯公式则相反为“由结果推原因”，现在有结果A已经发
-  生了，在众多原因B_i中到底由哪个导致，贝叶斯公式可以给出度量，类似于发生了某个案件A，在不了解案情前，嫌疑人B_i根据以往
+  生了，在众多原因B_{i}中到底由哪个导致，贝叶斯公式可以给出度量，类似于发生了某个案件A，在不了解案情前，嫌疑人B_{i}根据以往
   的记录其作案的概率为P(B_i)，但是如果了解了A案情，则P(B_i)就会变动了；贝叶斯公式如下：在全概率假定下有   
   $$P(B|A) = \frac{P(AB_{i})}{P(A)} = \frac{P(B_{i})P(A|B_{i})}{\sum_{j}P(B_{j})P(A|B_{j})}$$
 - 期望值：也称均值，$\overline{X} = \frac{\sum_{i=1}^{n} X_{i}}{n}$, 如果知道每个点x的概率f(x)，则可以写为 $E(X) = \sum
@@ -119,13 +119,13 @@
 #<<math-relevance>>
 - 总体线性相关系数: X和Y的总体线性相关系数,其中Var(X)，Var(Y)为X,Y的方差，Cov(X, Y)为X和Y的协方差； 
   $$ \rho = \frac{Cov(X,Y)}{\sqrt{Var(X)Var(Y)}}$$
-- 样本线性相关系数: X和Y的样本线性相关系数，其中X_i和Y_i分别是变量X和Y的样本观测值， $\overline{X}, \overline{Y}$ 分别是
+- 样本线性相关系数: X和Y的样本线性相关系数，其中X_{i}和Y_{i}分别是变量X和Y的样本观测值， $\overline{X}, \overline{Y}$ 分别是
   变量X和Y样本值的平均值；
   $$ r_{XY}=\frac{\sum(X_{i}-\overline{X})(Y_{i}-\overline{Y})}{\sqrt{\sum(X_{i}-\overline{X})^{2}\sum(Y_{i}-\overline{Y})^{2}}}$$
 - 条件分布：当被解释量X取某固定值时(条件)，Y的值不确定，Y的不同取值形成一定的分布，这就是Y的分布；
 - 条件概率：X取某固定值时，Y取不同值的概率称为条件概率；
 - 条件期望：对于X的每个取值，对Y所形成的分布确定其期望或者均值，称为Y的条件期望或条件均值，用E(Y|X_i)表示, 见图\ref{img-cond-exp}所示；
-- 回归线：对于每个X的取值X_i, 都有Y的条件期望E(Y|X_i)与之对应，代表Y的条件期望的点的轨迹形成的直线或者曲线称为回归线, 见
+- 回归线：对于每个X的取值X_{i}, 都有Y的条件期望E(Y|X_i)与之对应，代表Y的条件期望的点的轨迹形成的直线或者曲线称为回归线, 见
   图\ref{img-cond-exp}所示；
   #+label: img-cond-exp
   #+attr_latex: placement=[H]
@@ -138,10 +138,9 @@
   获得多个u，对于这么多个u，其实也是一个随机变量，如果这个随机变量的期望值等于总体空间的U，则可以说对我们划分的样本空间，
   可以对总体空间的期望值做无偏估计；官方语言组织叫，参数的样本估计值的期望值等于参数的真实值。估计量的数学期望等于被估计
   参数，则称此为无偏估计 ；
-
 ** 排列组合
-- 排列：n个相异事物取r个(1<=r<=n)的不同排列总数，为$P_{r}^{n} = n(n-1)(n-2)...(n-r+1)$ , 如果r=n，则$P_{r}^{r} = r!$
-- 组合：n个相异物件取r个(1<=r<=n)的不同组合总数，为$C_{r}^{n}=\frac{P_{r}^{n}}{r!}=\frac{n!}{r!(n-r)!}}$
+- 排列：n个相异事物取r个(1<=r<=n)的不同排列总数，为 $P_{r}^{n} = n(n-1)(n-2)...(n-r+1)$ , 如果r=n，则 $P_{r}^{r} = r!$
+- 组合：n个相异物件取r个(1<=r<=n)的不同组合总数，为 $C_{r}^{n}=\frac{P_{r}^{n}}{r!}=\frac{n!}{r!(n-r)!}}$
 - 0!=1; 
 ** 概率分布
 *** 离散分布
