--- a/os.org
+++ b/os.org
@@ -383,6 +383,8 @@ menu标签中item标签的主要属性见表\ref{tbl-menu-bar}
    定位精度，由系统决定选择LP；
 3. 当LP更新相关信息后，LocationListener对应的函数将被调用，应用程序可以在这些回调函数中做相应处理；
 4. 如果应用程序需要在位置和地址信息做转换，则使用Geocoder类提供的函数；
+** jni
+JNI是java native interface的缩写
 * FreeRTOS
 FreeRTOS是一个迷你操作系统内核的小型嵌入式系统。作为一个轻量级的操作系统，功能包括：任务管理、时间管理、信号量、消息队列、
 内存管理、记录功能等，可基本满足较小系统的需要。 功能和特点:
