--- a/math.org
+++ b/math.org
@@ -100,13 +100,21 @@
 - 独立事件的概率：若干个独立事件 $A_{1},...,A_{n}$ 之积的概率，等于各事件概率的乘积：$P(A_{1}...A_{n}) = P(A_{1})...P(A_{n})$
 - 全概率：其意义在于在较复杂的情况下直接计算A事件概率P(A)不容易，但是A事件总是随某个B_{i}发生，则适当去构造这组B_{i}可以简化
   计算。其公式如下，其中用到了条件概率公式, 此公式还能从另一个角度去理解，把B_{i}看做导致事件A发生的一种可能途径，对不同途
-  径，A发生的概率即条件概率P(A|B)各不同，而采取哪个途径却是随机的。 
+  径，A发生的概率即条件概率P(A|B)各不同，而采取哪个途径g却是随机的。 
   $$ P(A)=P(AB_{1})+...+P(AB_{n}) = P(B_{1})P(A|B_{1})+...+P(B_{n})P(A|B_{n}) $$
 - 贝叶斯公式：刻画了一些事件B_{i}其原有发生概率在事件A引入的条件下B_{i}的概率发生了改变；如果把事件A看成结果，把诸事件B_{i}看
   成导致结果A的可能原因，则全概率公式可以看做为“由原因推结果”，而贝叶斯公式则相反为“由结果推原因”，现在有结果A已经发
   生了，在众多原因B_{i}中到底由哪个导致，贝叶斯公式可以给出度量，类似于发生了某个案件A，在不了解案情前，嫌疑人B_{i}根据以往
-  的记录其作案的概率为P(B_i)，但是如果了解了A案情，则P(B_i)就会变动了；贝叶斯公式如下：在全概率假定下有   
+  的记录其作案的概率为P(B_i)，但是如果了解了A案情，则P(B_i)就会变动了；贝叶斯公式用语言表达为，
+  $$ 后验概率 = \frac{似然函数因子*先验概率}{证据因子}$$ 
+  贝叶斯公式如下：在全概率假定下有   
   $$P(B|A) = \frac{P(AB_{i})}{P(A)} = \frac{P(B_{i})P(A|B_{i})}{\sum_{j}P(B_{j})P(A|B_{j})}$$
+- 先验概率：一般从原因推结果的论证称为先验的; 
+- 后验概率：一般从结果推原因的论证称为后验的，以堵车为例，堵车的原因假定有车辆太多和交通事故，堵车的概率可以按照以往的经
+  验得到，这个概率就是先验概率，那若出门前听到新闻说今天路上出现了交通事故，然后我们计算堵车的概率，这个就是条件概率即
+  P(堵车|交通事故)，这是由因求果，或者在出门前我们知道了路上发生了交通事故，并且车辆很多，然后计算堵车的概率，这下就要用
+  全概率公式计算；如果我们已经出门，出现了堵车，那么我们想计算这次堵车由交通事故引起的概率是多少，就是后验概率，也可以说
+  是条件概率，P(交通事故|堵车)，这是由果求因；
 - 期望值：也称均值，$\overline{X} = \frac{\sum_{i=1}^{n} X_{i}}{n}$, 如果知道每个点x的概率f(x)，则可以写为 $E(X) = \sum
   x_{k}f(x_{x})$, 描述的是样本集合的中间点，平均值；
 - 方差：标准差为方差的开方，令u=E(X)为均值，定义X的方差Var(X)=E((X-u)^2)=E(X^2)-u^2, 另外还可以这样计算，方差
