增加部分机器学习概念

--- a/algorithm.org
+++ b/algorithm.org
@@ -6,6 +6,18 @@
 * 机器学习
 - 过拟合：overfitting，一个过分复杂的系统单纯对训练样本集能获得完美的表现，但是对于新鲜样本则可能不令人满意的现象称为过
   拟合；
+- 样本集打散：假如存在一个N个样本的样本集能够被一个函数集中的函数按照2^{N}种所有可能形式分为2类，则称该函数集能够把样本
+  数为N的样本集打散(shatter)，其实这里的2类只是一种特例的标记方式，可以延伸到任意一种标记方式，官方的定义为：对于给定集
+  合S={X1, ..., Xi}, 如果一个假设类H能够实现集合S中所有元素的任意一种标记方式，则称H能够打散S，这里的集合S就是上面的N个
+  样本，假设类H就是上面的函数集，任意一种标记方式的一种特列就是上面的分成2类，如果把2^{N}种分类的每一种看做一个学习问题，
+  那么2^{N}种学习问题就可以用N个点定义；
+- VC维：依照样本集打散的概念，该函数集的VC维就是用这个函数集中的函数能够打散的最大样本集的样本数目，也就是说，若存在N个
+  样本的样本集能够被函数集打散，而不存在N+1个样本集能够打散，则该函数集的VC维就是N。另外，若对于任意的样本数，总能找到 
+  一个样本集能够被这个函数集打散，则函数集的VC维就是无穷大；
+- PAC: Probably Approximately Correct，概率近似正确(学习模型) ，主要用于解决这一的学习问题：由于我们采集的样本空间不能完
+  全的满足真正的完整空间的数据，所以我们的样本空间与现实的完整空间存在一定的误差，这将导致我们的学习器通过对样本空间学习
+  得来的经验不能完全的满足未来新数据的处理，所以提出了PAC学习模型，以使得我们对满足未来新数据的错误率被限制在某常数
+  \epsilon范围内，\epsilon可以任意小；
 ** cordic算法
 三角函数的计算是个复杂的主题，有计算机之前，人们通常通过查找三角函数表来计算任意角度的三角函数的值。这种表格在人们刚刚产
 生三角函数的概念的时候就已经有了，它们通常是通过从已知值（比如sin(π/2)=1）开始并重复应用半角和和差公式而生成。现在有了
