--- a/math.org
+++ b/math.org
@@ -107,9 +107,10 @@
   生了，在众多原因B_{i}中到底由哪个导致，贝叶斯公式可以给出度量，类似于发生了某个案件A，在不了解案情前，嫌疑人B_{i}根据以往
   的记录其作案的概率为P(B_i)，但是如果了解了A案情，则P(B_i)就会变动了；贝叶斯公式用语言表达为，
   $$ 后验概率 = \frac{似然函数因子*先验概率}{证据因子}$$ 
-  贝叶斯公式如下：在全概率假定下有   
-  $$P(B|A) = \frac{P(AB_{i})}{P(A)} = \frac{P(B_{i})P(A|B_{i})}{\sum_{j}P(B_{j})P(A|B_{j})}$$
-- 先验概率：一般从原因推结果的论证称为先验的; 
+  贝叶斯公式如下：设试验E的样本空间为S，A为E的事件，B_{i}为S的一个划分，且P(A)>0, P(B_{i})>0, 则A事件发生情况下，A来自
+  B_{i}划分的概率为 $$P(B_{i}|A) = \frac{P(AB_{i})}{P(A)} = \frac{P(B_{i})P(A|B_{i})}{\sum_{j}P(B_{j})P(A|B_{j})}$$
+- 先验概率：一般从原因推结果的论证称为先验的, 如果一个事件(W)发生的原因(a_{ij})有很多，则P(W)叫先验概率，P(W|a_{ij})叫后
+  验概率; 
 - 后验概率：一般从结果推原因的论证称为后验的，以堵车为例，堵车的原因假定有车辆太多和交通事故，堵车的概率可以按照以往的经
   验得到，这个概率就是先验概率，那若出门前听到新闻说今天路上出现了交通事故，然后我们计算堵车的概率，这个就是条件概率即
   P(堵车|交通事故)，这是由因求果，或者在出门前我们知道了路上发生了交通事故，并且车辆很多，然后计算堵车的概率，这下就要用
