--- a/language.org
+++ b/language.org
@@ -17,6 +17,14 @@
 - as well as :也；和…一样；不但…而且；
 - vice versa:反之亦然；
 - every so often: 常常，偶尔；
+- AI: artificial intelligence，人工智能；
+- effortlessly：轻松地；
+- inference，infer:推理；
+- conditional probability：条件概率；
+- installments：分期付款；
+- credit scoring：信用评估；
+- empirical error: 经验误差；
+- proportion：比例；
 # * 公司
 # ** nationz
 
