增加部分单词和VC维以及PAC模型的解释

--- a/algorithm.org
+++ b/algorithm.org
@@ -1,4 +1,4 @@
-#+title: 机器学习 
+#+title: 算法 
 #+author: 比克曼
 #+latex_class: org-latex-pdf 
 #+latex: \newpage 
@@ -11,9 +11,12 @@
   合S={X1, ..., Xi}, 如果一个假设类H能够实现集合S中所有元素的任意一种标记方式，则称H能够打散S，这里的集合S就是上面的N个
   样本，假设类H就是上面的函数集，任意一种标记方式的一种特列就是上面的分成2类，如果把2^{N}种分类的每一种看做一个学习问题，
   那么2^{N}种学习问题就可以用N个点定义；
-- VC维：依照样本集打散的概念，该函数集的VC维就是用这个函数集中的函数能够打散的最大样本集的样本数目，也就是说，若存在N个
-  样本的样本集能够被函数集打散，而不存在N+1个样本集能够打散，则该函数集的VC维就是N。另外，若对于任意的样本数，总能找到 
-  一个样本集能够被这个函数集打散，则函数集的VC维就是无穷大；
+- VC维：依照样本集打散的概念，该函数集的VC维就是用这个函数集中的函数能够打散的最大样本集的样本数目, 而所谓的打散，指的是
+  这个函数集能够按照任意个数的类别来分开这么多个样本，也就是说，若存在N个样本的样本集能够被函数集打散，而不存在N+1个样本
+  集能够打散，则该函数集的VC维就是N。另外，若对于任意的样本数，总能找到一个样本集能够被这个函数集打散，则函数集的VC维就
+  是无穷大，当我们在衡量一个函数集能否分类一堆样本时，理论上这个函数集的VC维越大则表示这个函数集能够分类的样本数量越大，
+  否则越小，但是在实际中，并不是说VC维越大越有用，因为对样本进行分类时并不是说要做到0错误，只需要保证可接受的错误率就行，
+  这时对函数集的VC维要求就放宽了，一般函数集的VC维越大函数集越复杂越难实现，所以实际中，常常用到的是VC维比较低的函数集；
 - PAC: Probably Approximately Correct，概率近似正确(学习模型) ，主要用于解决这一的学习问题：由于我们采集的样本空间不能完
   全的满足真正的完整空间的数据，所以我们的样本空间与现实的完整空间存在一定的误差，这将导致我们的学习器通过对样本空间学习
   得来的经验不能完全的满足未来新数据的处理，所以提出了PAC学习模型，以使得我们对满足未来新数据的错误率被限制在某常数
