增加部分短语和gps android开发详细步骤

--- a/algorithm.org
+++ b/algorithm.org
@@ -6,6 +6,10 @@
 * 机器学习
 - 过拟合：overfitting，一个过分复杂的系统单纯对训练样本集能获得完美的表现，但是对于新鲜样本则可能不令人满意的现象称为过
   拟合；
+- 样本集合：一般样本集合可以分为
+  1. training set：训练集，用于训练得出我们的候选算法集合；
+  2. validation set：验证集，用于在候选算法集合中选出一个错误率最低的算法；
+  3. test set：测试集，用于测试我们选出的这个错误率最低的算法；
 - 样本集打散：假如存在一个N个样本的样本集能够被一个函数集中的函数按照2^{N}种所有可能形式分为2类，则称该函数集能够把样本
   数为N的样本集打散(shatter)，其实这里的2类只是一种特例的标记方式，可以延伸到任意一种标记方式，官方的定义为：对于给定集
   合S={X1, ..., Xi}, 如果一个假设类H能够实现集合S中所有元素的任意一种标记方式，则称H能够打散S，这里的集合S就是上面的N个
@@ -21,6 +25,11 @@
   全的满足真正的完整空间的数据，所以我们的样本空间与现实的完整空间存在一定的误差，这将导致我们的学习器通过对样本空间学习
   得来的经验不能完全的满足未来新数据的处理，所以提出了PAC学习模型，以使得我们对满足未来新数据的错误率被限制在某常数
   \epsilon范围内，\epsilon可以任意小；
+- inductive bias：归纳偏置，机器学习试图去建造一个可以学习的算法，用来预测某个目标的结果。要达到此目的，要给于学习算法一
+  些训练样本，样本说明输入与输出之间的预期关系。然后假设学习器在预测中逼近正确的结果，其中包括在训练中未出现的样本。既然
+  未知状况可以是任意的结果，若没有其它额外的假设，这任务就无法解决。这种关于目标函数的必要假设就称为归纳偏置；
+- generalization：一般化，指的是，我们通过样本集训练出的算法可以推广到未知输入得到正确输出；
+- Loss function:损失函数，表示实际输出值与我们拟合算法输出值的差；
 ** cordic算法
 三角函数的计算是个复杂的主题，有计算机之前，人们通常通过查找三角函数表来计算任意角度的三角函数的值。这种表格在人们刚刚产
 生三角函数的概念的时候就已经有了，它们通常是通过从已知值（比如sin(π/2)=1）开始并重复应用半角和和差公式而生成。现在有了
