--- a/language.org
+++ b/language.org
@@ -20,12 +20,14 @@
 - AI: artificial intelligence，人工智能；
 - effortlessly：轻松地；
 - inference，infer:推理；
-- conditional probability：条件概率；
 - installments：分期付款；
 - credit scoring：信用评估；
 - empirical error: 经验误差；
 - proportion：比例；
 - PAC: probably approximately correct, 概率近似正确；
+- overfitting:过拟合；
+- underfitting：欠拟合；
+- cross-validation：交叉验证；
 - pessimistic:悲观的；
 - anomaly: 异常；
 - latent：潜藏的；
@@ -34,6 +36,21 @@
 - polynomial：多项式；
 - partial derivatives：偏导数；
 - quadratic：二次的，二次方程；
+- inductive bias: 归纳偏置，诱导偏置；
+- iid:机器学习界的缩写，independent and identically distributed，独立同分布；
+- slope：斜率；
+- intercept：截距；
+- joint distribution：联合分布；
+- approximation error:逼近误差；
+- bayesian decision theory：贝叶斯决策伦；
+- realm：领域；
+- loan：贷款；
+- prior probability:先验概率；
+- conditional probability：条件概率；
+- posterior probability:后验概率；
+- discriminant：判别式；
+- likelihood：可以翻译为似然，最大似然就是maximum likelihood；
+- maximum likelihood estimation:最大似然估计
 # * 公司
 # ** nationz
 
