更新一处公式错误

--- a/math.org
+++ b/math.org
@@ -117,7 +117,7 @@
   全概率公式计算；如果我们已经出门，出现了堵车，那么我们想计算这次堵车由交通事故引起的概率是多少，就是后验概率，也可以说
   是条件概率，P(交通事故|堵车)，这是由果求因；
 - 算术平均值：算术平均值是期望值的无偏估计量；
-  $$ \overline{x} = \frac{x_{1}+...+x_{n}}{n} = \frac{\sum_{i=1}{n}x_{i}}{n}$$
+  $$ \overline{x} = \frac{x_{1}+...+x_{n}}{n} = \frac{\sum_{i=1}^{n}x_{i}}{n}$$
 - 均方根平均值： $$ \overline{x}=\sqrt{\frac{x_{1}^{2}+...+x_{n}^{2}}{n}}=\sqrt{\frac{\sum_{i=1}^{n}x_{i}^{2}}{n}}$$
 - 几何平均值： $$ \overline{x}=\sqrt[n]{x_{1}*...*x_{n}}=\sqrt[n]{\prod_{i=1}^{n}x_{i}}$$
 - 对数平均值: $$ \overline{x}=\frac{x_{1}-x_{2}}{\ln{x_{1}-\ln{x_{2}}}}$$
@@ -155,7 +155,7 @@
   参数，则称此为无偏估计 ；
 ** 排列组合
 - 排列：n个相异事物取r个(1<=r<=n)的不同排列总数，为 $P_{r}^{n} = n(n-1)(n-2)...(n-r+1)$ , 如果r=n，则 $P_{r}^{r} = r!$
-- 组合：n个相异物件取r个(1<=r<=n)的不同组合总数，为 $C_{r}^{n}=\frac{P_{r}^{n}}{r!}=\frac{n!}{r!(n-r)!}}$
+- 组合：n个相异物件取r个(1<=r<=n)的不同组合总数，为 $C_{r}^{n}=\frac{P_{r}^{n}}{r!}=\frac{n!}{r!(n-r)!}$
 - 0!=1; 
 ** 概率分布
 *** 离散分布
