更新贝叶斯估计的一个解释公式

--- a/math.org
+++ b/math.org
@@ -106,7 +106,7 @@
   成导致结果A的可能原因，则全概率公式可以看做为“由原因推结果”，而贝叶斯公式则相反为“由结果推原因”，现在有结果A已经发
   生了，在众多原因B_{i}中到底由哪个导致，贝叶斯公式可以给出度量，类似于发生了某个案件A，在不了解案情前，嫌疑人B_{i}根据以往
   的记录其作案的概率为P(B_i)，但是如果了解了A案情，则P(B_i)就会变动了；贝叶斯公式用语言表达为，
-  $$ 后验概率 = \frac{似然函数因子*先验概率}{证据因子}$$ 
+  $$ 后验概率 = \frac{似然函数因子*先验概率}{证据因子}$$ 或者 $$ P(原因i|结果) = \frac{P(结果|原因i)*P(原因i)}{P(结果)}$$ 
   贝叶斯公式如下：设试验E的样本空间为S，A为E的事件，B_{i}为S的一个划分，且P(A)>0, P(B_{i})>0, 则A事件发生情况下，A来自
   B_{i}划分的概率为 $$P(B_{i}|A) = \frac{P(AB_{i})}{P(A)} = \frac{P(B_{i})P(A|B_{i})}{\sum_{j}P(B_{j})P(A|B_{j})}$$
 - 先验概率：一般从原因推结果的论证称为先验的, 如果一个事件(W)发生的原因(a_{ij})有很多，则P(W)叫先验概率, 通常是我们在没
