--- a/math.org
+++ b/math.org
@@ -108,7 +108,12 @@
   的记录其作案的概率为P(B_i)，但是如果了解了A案情，则P(B_i)就会变动了；贝叶斯公式用语言表达为，
   $$ 后验概率 = \frac{似然函数因子*先验概率}{证据因子}$$ 或者 $$ P(原因i|结果) = \frac{P(结果|原因i)*P(原因i)}{P(结果)}$$ 
   贝叶斯公式如下：设试验E的样本空间为S，A为E的事件，B_{i}为S的一个划分，且P(A)>0, P(B_{i})>0, 则A事件发生情况下，A来自
-  B_{i}划分的概率为 $$P(B_{i}|A) = \frac{P(AB_{i})}{P(A)} = \frac{P(B_{i})P(A|B_{i})}{\sum_{j}P(B_{j})P(A|B_{j})}$$
+  B_{i}划分的概率如下公式，其中P(B_{i})可以通过训练集中各个样本所在的比例来估计，而P(A|B_{i})需要做估计，一般分为
+  1. 参数估计：是先假定P(A|B_{i})已经具有某确定的分布形式，比如正太，再用已经具有类别标签的训练集对概率分布的参数进行估
+     计；
+  2. 非参数估计：非参数是在不知道或者不假设类条件概率密度的分布形式的基础上，直接用样本集中所包含的信息来估计样本的概率
+     分布情况。 
+  $$P(B_{i}|A) = \frac{P(AB_{i})}{P(A)} = \frac{P(B_{i})P(A|B_{i})}{\sum_{j}P(B_{j})P(A|B_{j})}$$
 - 先验概率：一般从原因推结果的论证称为先验的, 如果一个事件(W)发生的原因(a_{ij})有很多，则P(W)叫先验概率, 通常是我们在没
   有分析这些原因前根据自己的经验决定的概率，P(W|a_{ij})叫后验概率，在分析原因后对结果概率做的修正概率; 
 - 后验概率：一般从结果推原因的论证称为后验的，以堵车为例，堵车的原因假定有车辆太多和交通事故，堵车的概率可以按照以往的经
@@ -116,12 +121,6 @@
   P(堵车|交通事故)，这是由因求果，或者在出门前我们知道了路上发生了交通事故，并且车辆很多，然后计算堵车的概率，这下就要用
   全概率公式计算；如果我们已经出门，出现了堵车，那么我们想计算这次堵车由交通事故引起的概率是多少，就是后验概率，也可以说
   是条件概率，P(交通事故|堵车)，这是由果求因；
-- 算术平均值：算术平均值是期望值的无偏估计量；
-  $$ \overline{x} = \frac{x_{1}+...+x_{n}}{n} = \frac{\sum_{i=1}^{n}x_{i}}{n}$$
-- 均方根平均值： $$ \overline{x}=\sqrt{\frac{x_{1}^{2}+...+x_{n}^{2}}{n}}=\sqrt{\frac{\sum_{i=1}^{n}x_{i}^{2}}{n}}$$
-- 几何平均值： $$ \overline{x}=\sqrt[n]{x_{1}*...*x_{n}}=\sqrt[n]{\prod_{i=1}^{n}x_{i}}$$
-- 对数平均值: $$ \overline{x}=\frac{x_{1}-x_{2}}{\ln{x_{1}-\ln{x_{2}}}}$$
-- 加权平均值： $$ \overline{x}=\frac{w_{1}x_{1}+...+w_{n}x_{n}}{w_{1}+...+w_{n}}=\frac{\sum{w_{i}x_{i}}}{\sum{w_{i}}}$$ 
 - 期望值：也称均值，$\overline{X} = \frac{\sum_{i=1}^{n} X_{i}}{n}$, 如果知道每个点x的概率f(x)，则可以写为 $E(X) = \sum
   x_{k}f(x_{x})$, 描述的是样本集合的中间点，平均值；
 - 方差：标准差为方差的开方，令u=E(X)为均值，定义X的方差Var(X)=E((X-u)^2)=E(X^2)-u^2, 另外还可以这样计算，方差
@@ -147,7 +146,6 @@
   [[./img/cond-exp-plot.jpg]]
 - 回归函数：被解释变量Y的条件期望E(Y|X_i)随解释变量X的变化而有规律的变化，如果把Y的条件期望表现为X的如下函数，这个函数称
   为回归函数, 回归函数又分为总体回归函数和样本回归函数；$$ E(Y|X_{i}) = f(X_{i})$$
-- 残差：也叫剩余值，residual，表示实际值Y与回归线上的估计值Y'的纵向距离Y-Y', 一般Y'用E(Y)；
 - 无偏估计：用期望值来阐述，对于一个总体空间的期望值为U，由于各种原因没办法或者不方便获得这个期望值参数U，但是我们可以通
   过总体空间的一个样本空间的u来估计总体空间的U，一般情况下u是不等于U的，但是总体空间可以划分出若干多个样本空间，也就可以
   获得多个u，对于这么多个u，其实也是一个随机变量，如果这个随机变量的期望值等于总体空间的U，则可以说对我们划分的样本空间，
@@ -189,5 +187,86 @@ plt.show()                      #显示出来
 **** 正太分布
 **** 指数分布
 **** \beta分布
+* 统计
+** 概念
+- 样本分类：样本具有特征向量，样本属于某个类别，如果在坐标系中表示，则特征向量的分量表示坐标系的各个轴，由各个特征量具体
+  的特征值得出的坐标系中的点，就是样本，而对各个样本进行画圈分类，则表示对样本进行分类，有两种分类；
+  1. 确定性分类：表示每个样本点确定的只属于某个类别，不属于另一个类别，这样的分类具有明显的界限；
+  2. 随机性分类：表示某个样本点属于某个类别的概率为多少，该样本点也有可能属于另一个类别，属于另一个概率，通过比较各个概
+     率值大小来判断该样本点属于哪个类别，一般这时候采用贝叶斯公式进行分类；
+- 算术平均值：算术平均值是期望值的无偏估计量；
+  $$ \overline{x} = \frac{x_{1}+...+x_{n}}{n} = \frac{\sum_{i=1}^{n}x_{i}}{n}$$
+- 均方根平均值： $$ \overline{x}=\sqrt{\frac{x_{1}^{2}+...+x_{n}^{2}}{n}}=\sqrt{\frac{\sum_{i=1}^{n}x_{i}^{2}}{n}}$$
+- 几何平均值： $$ \overline{x}=\sqrt[n]{x_{1}*...*x_{n}}=\sqrt[n]{\prod_{i=1}^{n}x_{i}}$$
+- 对数平均值: $$ \overline{x}=\frac{x_{1}-x_{2}}{\ln{x_{1}-\ln{x_{2}}}}$$
+- 加权平均值： $$ \overline{x}=\frac{w_{1}x_{1}+...+w_{n}x_{n}}{w_{1}+...+w_{n}}=\frac{\sum{w_{i}x_{i}}}{\sum{w_{i}}}$$
+- 残差：也叫剩余值，residual，表示实际值Y与回归线上的估计值Y'的纵向距离Y-Y', 一般Y'用E(Y)；
+- SSE:和方差，是拟合数据和原始数据对应点的误差的平方和，SSE越接近于0，说明模型选择和拟合更好，数据预测也越成功。接下来的
+  MSE和RMSE因为和SSE是同出一宗，所以效果一样, y_{i}表示实际值， $\widehat{y_{i}}$ 表示估计值，计算公式； 
+  $$ SSE = \sum_{i=1}^{n}w_{i}(y_{i}-\widehat{y_{i}})^{2}$$
+- MSE: 均方差，是预测数据和原始数据对应点误差的平方和的均值，也就是SSE/n，和SSE没有太大的区别，计算公式；
+  $$ MSE = SSE/n$$
+- RMSE:均方根，也叫回归系统的拟合标准差，是MSE的平方根，就算公式如下；
+  $$ RMSE = \sqrt{MSE}$$
+- SSR: Sum of squares of the regression，即预测数据与原始数据均值之差的平方和, $\overline{y_{i}}$ 数据的平均值，公式如下
+  $$ SSR=\sum_{i=1}^{n}w_{i}(\widehat{y_{i}}-\overline{y_{i}})^{2}$$
+- SST：Total sum of squares，即原始数据和均值之差的平方和，公式如下；
+  $$ SST=\sum_{i=1}^{n}w_{i}(y_{i}-\overline{y_{i}})^{2}$$ 
+- R-square: 确定系数, 定义为SSR和SST的比值，取值范围为[0, 1],越接近1，表明方程的变量对y的解释能力越强，模型对数据拟合的
+  越好，公式如下；
+  $$ R-square = \frac{SSR}{SST}=\frac{SST-SSE}{SST}=1-\frac{SSE}{SST}$$
+- 最大似然估计： 似然估计是在每个事件x_{i}的概率分布确定p(x_{i})，但是参数未知的情况下的一种估计方式，因为如果我们确定了
+  这个参数，那么我们采集到的这些事件样本发生的概率应该最大，即p(x_{1})*...*p(x_{n})最大，具体解时可以采用log方式转换, 最
+  大似然估计还可以这样理解，即，我们观察到的结果最容易是哪个因素引起的，比如手写识别时，就是要找出哪个单词最大概率导致出
+  这个手写样本产生，最大似然代表最能满足样本的模型情况；要采用似然估计，必须满足一定条件；
+  1. 事件x_{i}的概率分布确定，这样待估参数是确定性的未知量；
+  2. 每个样本是独立的，这样才能使用概率乘法；
+  3. 如果待估参数是多维的，那么每个类别的样本x_{i}，不包含另一个类别中信息；
+- 奥卡姆剃刀：如果两个理论具有相似的解释力度，那么优先选择那个更简单的，因为，往往越简单越常见，越繁复越少见，一般代表先
+  验概率最大的模型情况；
+- 损失函数：loss function，指我们的估计模型的输出值y与真实值之间的偏差，x是输入数据，y(x)是推测出结果的模型，t是x对应的
+  真实结果，y(x)是t的估计值，则损失函数表示为L(t, y(x)), 我们常用的损失函数有平方差函数
+  $$ L(t, y(x)) = [y(x)-t]^{2}$$ 通常在进行度量时，使用损失函数的平均值E(L)来衡量
+  $$ E(L) = \iint L(t, y(x))p(y,x)\mathrm{d}x\mathrm{d}y$$ 
   
+** 贝叶斯分类
+可以通过一个例子先明确先验概率，后验概率的具体情况：如果有一所学校，有60%是男生和40%是女生。女生穿裤子与裙子的数量相同；
+所有男生穿裤子。一个观察者，随机从远处看到一名学生，观察者只能看到该学生穿裤子。那么该学生是女生的概率是多少？这里题目中
+观察者比如近似眼看直接不清性别，或者从装扮上看不出。答案可以用贝叶斯定理来算。
+- 用事件 G 表示观察到的学生是女生；
+- 用事件 T 表示观察到的学生穿裤子；
+于是，现在要计算 P(G|T) ，我们需要知道：
+1. P(G) ：表示一个学生是女生的概率，这是在没有任何其他信息下的概率。这也就是我们说的先验概率。由于观察者随机看到一名学生，
+   意味着所有的学生都可能被看到，女生在全体学生中的占比是 40 ，所以概率是 0.4 。
+2. P(B)：是学生不是女生的概率，也就是学生是男生的概率，也就是在没有其他任何信息的情况下，学生是男生的先验概率。 B 事件是
+   G 事件的互补的事件，这个比例是 60 ，也即 0.6 。
+3. P(T|G)： 是在女生中穿裤子的概率，根据题目描述，是相同的 0.5 。这也是 T 事件的概率，given G 事件。
+4. P(T|B)： 是在男生中穿裤子的概率，这个值是1。
+5. P(T)： 是学生穿裤子的概率，即任意选一个学生，在没有其他信息的情况下，TA穿裤子的概率。如果要计算的话，那可以计算出所有
+   穿裤子的学生的数量，除以总数，总数可以假设为常数 C ，但是最后会被约去。或者根据全概率公式 P(T)=P(T|G)P(G)+P(T|B)P(B)
+   计算得到 P(T)=0.5×0.4+1×0.6=0.8 。 
+基于以上所有信息，如果观察到一个穿裤子的学生，并且是女生的概率是P(G|T)=P(T|G)P(G)P(T)=0.5×0.40.8=0.25.
+另一个例子关于手写识别，即我们采集到了用户输入的手写样本D，现在我们要计算用户最想输入哪个单词H，其中可能有h1,h2...hn, 那
+么我们需要计算P(h_{i}|D)的概率，哪个h_{i}概率大，我们就可以说用户想输入哪个单词，对此，我们有如下公式，可以解释为
+1. P(h_{i}|D)：后验概率，在获得输入样本后，这个样本最大可能预示的单词；
+2. P(D|h_{i})：似然概率，某个单词可能导致出现这样的样本的概率，最大似然，也就意味着寻找这个最大概率的单词，可由训练得到；
+3. P(h_{i})：先验概率，某个单词出现的概率，也就是该单词在人们日常用语中出现的概率，可以通过语料库获得；
+4. P(D)：对于所有的单词预测，P(D)是一致的，可以视为常数，并且可以忽略，只需要比较后验概率*似然概率的相对大小；
+$$ P(h_{i}|D)=\frac{P(D|h_{i})*P(h_{i})}{P(D)}$$
+*** 朴素贝叶斯
+朴素贝叶斯：是在贝叶斯分类基础上，基于一个简单的假定：给定目标值时属性之间相互条件独立，这样可以简化似然概率的计算。朴素
+贝叶斯理论经典应用是垃圾邮件分类：给定一封邮件，判定它是否属于垃圾邮件。用D来表示这封邮件，注意D由N个单词组成。我们用h+
+来表示垃圾邮件，h-表示正常邮件。问题可以形式化地描述为求：
+$$ P(h+|D) = \frac{P(h+) * P(D|h+)}{P(D)}$$ 和
+$$ P(h-|D) = \frac{P(h-) * P(D|h-)}{P(D)}$$ 
+其中P(h+) 和P(h-)这两个先验概率都是很容易求出来的，只需要计算一个邮件库里面垃圾邮件和正常邮件的比例就行了。然而 P(D|h+)
+却不容易求，因为D里面含有N个单词d_{i}，所以
+$$ P(D|h+) = P(d1,d2,..,dn|h+)$$ 
+我们遇到了数据稀疏性，为什么这么说呢？P(d1,d2,..,dn|h+) 就是说在垃圾邮件当中出现跟我们目前这封邮件一模一样的一封邮件的概
+率是多大！每封邮件都是不同的，世界上有无穷多封邮件, 计算起来会非常困难。我们又该如何来计算 P(d1,d2,..,dn|h+) 呢？
+我们将 P(d1,d2,..,dn|h+) 扩展为： 
+$$ P(d1|h+) * P(d2|d1, h+) * P(d3|d2,d1, h+) * .. $$
+进一步使用一个更激进的假设，假设d_{i} 与 d_{i-1}是完全条件无关的，于是式子就简化为 
+$$ P(d1|h+) * P(d2|h+) * P(d3|h+) * ..$$ 这个就是所谓的条件独立假设，也正是朴素贝叶斯方法的朴素之处。而计算该式子比较简
+单，只要统计d_{i}这个单词在垃圾邮件中出现的频率即可。
 
