增加latex的数学符号和贝叶斯分类的一种决策情况

--- a/math.org
+++ b/math.org
@@ -82,6 +82,10 @@
 *** 应用
 ***** 多项式拟合
 - 概念：根据给定的m个点，并不要求这条曲线经过这些点，而是y=f(x)的近似曲线y=\(\Phi(x)\)；
+* 矩阵
+** 概念
+- 范数：设V是实数域R(或复数域C)上的n维线性空间，对于V中的任意一个向量或矩阵 \alpha 按照某一确定法则对应着一个实数，这个
+  实数称为 \alpha 的 _范数_ , 记为||\alpha||，几范数就是元素几次方的和，除以维数；
 * 概率
 ** 概念
 - 样本空间：随机试验的所有可能结果组成的集合;
@@ -253,6 +257,22 @@ plt.show()                      #显示出来
 3. P(h_{i})：先验概率，某个单词出现的概率，也就是该单词在人们日常用语中出现的概率，可以通过语料库获得；
 4. P(D)：对于所有的单词预测，P(D)是一致的，可以视为常数，并且可以忽略，只需要比较后验概率*似然概率的相对大小；
 $$ P(h_{i}|D)=\frac{P(D|h_{i})*P(h_{i})}{P(D)}$$
+另外根据不同的分类决策规则，贝叶斯分类有多种形式。
+1. 最小错误率贝叶斯分类器；
+2. 最大似然比贝叶斯分类器；
+3. 最小风险贝叶斯分类器；
+*** 最小错误率贝叶斯分类器
+最小错误率贝叶斯分类器也可以叫最大后验概率分类器。
+当已知类别出现的先验概率\(P(\omega_{i})\)和每个类中的样本分布的类条件概率密度\(P(x|omega_{i})\)时，可以求得一个待分类样本属于每
+类的后验概率\(P(\omega_{i}|x)\), 将其划归到后验概率最大的那一类中，这种分类器称为最小错误率贝叶斯分类器，其分类决策规则可表
+示为：
+1. 两类问题中，当\(P(\omega_{i}|x) > P(\omega_{j}|x)\)时，判决\(x \in \omega_{i}\);
+2. 对于多类情况，则当\( P(\omega_{i}|x)=\max\limits_{1\leq j \leqc} P(\omega_{j}|x)\)时，判决\(x\in \omega_{i}\)
+可以发现，上述分类决策规则实为“最大后验概率分类器”，它与“最小错误率分类器”的关系可以简单分析如下：当采用最大后验概率
+分类器时，分类错误的概率为
+$$ P(e) = \int_{-\infty}^{-\infty}P(error, x)\mathrm{d}x$$  
+而 $$ P(error|x) = \sum_{i=1}^{c}P(\omega_{j}|x) - \max\limits_{1\leq j\leq c}P(\omega_{j}|x) $$  因此，\(P(error|x)\)取
+得了最小值， P(e)也取得了最小值，“最大后验概率分类器”与“最小错误率分类器”是等价的。
 *** 朴素贝叶斯
 朴素贝叶斯：是在贝叶斯分类基础上，基于一个简单的假定：给定目标值时属性之间相互条件独立，这样可以简化似然概率的计算。朴素
 贝叶斯理论经典应用是垃圾邮件分类：给定一封邮件，判定它是否属于垃圾邮件。用D来表示这封邮件，注意D由N个单词组成。我们用h+
