--- a/tool.org
+++ b/tool.org
@@ -251,182 +251,48 @@
 #     \end{figure}
 #   #+end_src
 ** 符号
-*** 特殊符号
-|-------------------+-------------------+-----------------------+------------------------+-------------------|
-| 顶部横线          | 底部横线          | 顶部左箭头            | 顶部右箭头             | 顶部波浪号        |
-| $\overline{abc}$  | $\underline{abc}$ | $\overleftarrow{abc}$ | $\overrightarrow{abc}$ | $\widetilde{abc}$ |
-|-------------------+-------------------+-----------------------+------------------------+-------------------|
-| 顶部尖号          | 顶部大括号向上    | 底部大括号向下        | 根号                   | n次方根号         |
-| $\widehat{abc}$   | $\overbrace{abc}$ | $\underbrace{abc}$    | $\sqrt{abc}$           | $\sqrt[n]{abc}$   |
-|-------------------+-------------------+-----------------------+------------------------+-------------------|
-| 分数号            | 无                | 无                    | 无                     | 无                |
-| $\frac{abc}{xyz}$ | 无                | 无                    | 无                     | 无                |
-|-------------------+-------------------+-----------------------+------------------------+-------------------|
-*** 大写的希腊字母
-|--------+---------+----------+--------|
-| \Gamma | \Lambda | \Sigma   | \Psi   |
-|--------+---------+----------+--------|
-| \Delta | \Xi     | \Upsilon | \Omega |
-|--------+---------+----------+--------|
-| \Theta | \Pi     | \Phi     | 无     |
-|--------+---------+----------+--------|
-*** 希腊字母
-|--------+-----------+---------+----------+----------+-------------+-------+--------+--------+-----------|
-| \alpha | \beta     | \gamma  | \delta   | \epsilon | \varepsilon | \zeta | \eta   | \theta | \vartheta |
-|--------+-----------+---------+----------+----------+-------------+-------+--------+--------+-----------|
-| \iota  | \kappa    | \lambda | \mu      | \nu      | \xi         | \pi   | \varpi | \rho   | \varrho   |
-|--------+-----------+---------+----------+----------+-------------+-------+--------+--------+-----------|
-| \sigma | \varsigma | \tau    | \upsilon | \phi     | \varphi     | \chi  | \psi   | \omega | 无        |
-|--------+-----------+---------+----------+----------+-------------+-------+--------+--------+-----------|
-*** 箭头符号
-|--------------------+---------------------|
-| \leftarrow         | \longleftarrow      |
-|--------------------+---------------------|
-| \Leftarrow         | \Longleftarrow      |
-|--------------------+---------------------|
-| \rightarrow        | \longrightarrow     |
-|--------------------+---------------------|
-| \Rightarrow        | \Longrightarrow     |
-|--------------------+---------------------|
-| \leftrightarrow    | \longleftrightarrow |
-|--------------------+---------------------|
-| \Leftrightarrow    | \Longleftrightarrow |
-|--------------------+---------------------|
-| \mapsto            | \longmapsto         |
-|--------------------+---------------------|
-| \hookleftarrow     | \hookrightarrow     |
-|--------------------+---------------------|
-| \leftharpoonup     | \rightharpoonup     |
-|--------------------+---------------------|
-| \leftharpoondown   | \rightharpoondown   |
-|--------------------+---------------------|
-| \rightleftharpoons | \leadsto            |
-|--------------------+---------------------|
-| \uparrow           | \downarrow          |
-|--------------------+---------------------|
-| \Uparrow           | \Downarrow          |
-|--------------------+---------------------|
-| \updownarrow       | \Updownarrow        |
-|--------------------+---------------------|
-| \nwarrow           | \nearrow            |
-|--------------------+---------------------|
-| \swarrow           | \searrow            |
-|--------------------+---------------------|
-*** 二进制符号
-|---------+-----------+------------------|
-| \pm     | \cap      | \diamond         |
-|---------+-----------+------------------|
-| \mp     | \cup      | \bigtriangleup   |
-|---------+-----------+------------------|
-| \times  | \uplus    | \bigtriangledown |
-|---------+-----------+------------------|
-| \div    | \sqcap    | \triangleleft    |
-|---------+-----------+------------------|
-| \ast    | \sqcup    | \triangleright   |
-|---------+-----------+------------------|
-| \star   | \vee      | \lhd             |
-|---------+-----------+------------------|
-| \circ   | \wedge    | \rhd             |
-|---------+-----------+------------------|
-| \bullet | \setminus | \unlhd           |
-|---------+-----------+------------------|
-| \cdot   | \wr       | \unrhd           |
-|---------+-----------+------------------|
-| \oplus  | \ominus   | \otimes          |
-|---------+-----------+------------------|
-| \oslash | \odot     | \bigcirc         |
-|---------+-----------+------------------|
-| \dagger | \ddagger  | \amalg           |
-|---------+-----------+------------------|
-*** 关系符号
-|-------------+-------------+-----------|
-| \leq        | \geq        | \equiv    |
-|-------------+-------------+-----------|
-| \prec       | \succ       | \sim      |
-|-------------+-------------+-----------|
-| \preceq     | \succeq     | \simeq    |
-|-------------+-------------+-----------|
-| \ll         | \gg         | \asymp    |
-|-------------+-------------+-----------|
-| \subset     | \supset     | \approx   |
-|-------------+-------------+-----------|
-| \subseteq   | \sqsupset   | \neq      |
-|-------------+-------------+-----------|
-| \sqsubseteq | \sqsupseteq | \doteq    |
-|-------------+-------------+-----------|
-| \in         | \ni         | \notin    |
-|-------------+-------------+-----------|
-| \vdash      | \dashv      | \models   |
-|-------------+-------------+-----------|
-| \perp       | \mid        | \parallel |
-|-------------+-------------+-----------|
-| \bowtie     | \Join       | \smile    |
-|-------------+-------------+-----------|
-| \frown      | \propto     | 无        |
-|-------------+-------------+-----------|
-*** 分割符号
-|------------+------------------------|
-| \lfloor    | \rfloor                |
-|------------+------------------------|
-| \lceil     | \rceil                 |
-|------------+------------------------|
-| \langle    | \rangle                |
-|------------+------------------------|
-| \backslash | 双竖线为一个斜杠和竖线 |
-|------------+------------------------|
-*** 杂项符号
-|--------------+------------+------------|
-| \dag         | \S         | \copyright |
-|--------------+------------+------------|
-| \ddag        | \P         | \pounds    |
-|--------------+------------+------------|
-| \ldots       | \cdots     | \vdots     |
-|--------------+------------+------------|
-| \ddots       | \aleph     | \prime     |
-|--------------+------------+------------|
-| \forall      | \hbar      | \emptyset  |
-|--------------+------------+------------|
-| \exists      | \imath     | \nabla     |
-|--------------+------------+------------|
-| \neg         | \jmath     | \surd      |
-|--------------+------------+------------|
-| \flat        | \ell       | \top       |
-|--------------+------------+------------|
-| \natural     | \wp        | \bot       |
-|--------------+------------+------------|
-| \sharp       | \Re        | \backslash |
-|--------------+------------+------------|
-| \angle       | \Im        | \partial   |
-|--------------+------------+------------|
-| \mho         | \infty     | \Box       |
-|--------------+------------+------------|
-| \Diamond     | \triangle  | \clubsuit  |
-|--------------+------------+------------|
-| \diamondsuit | \heartsuit | \spadesuit |
-|--------------+------------+------------|
-
-*** 大小可变符号
-|---------+-----------+------------|
-| \sum    | \bigcap   | \bigodot   |
-|---------+-----------+------------|
-| \prod   | \bigcup   | \bigotimes |
-|---------+-----------+------------|
-| \coprod | \bigsqcup | \bigoplus  |
-|---------+-----------+------------|
-| \int    | \bigvee   | \biguplus  |
-|---------+-----------+------------|
-| \oint   | \bigwedge | 无         |
-|---------+-----------+------------|
-*** Log符号
-|---------+-------+------+------+---------+---------+------+-------|
-| \arccos | \cos  | \csc | \exp | \ker    | \limsup | \min | \sinh |
-|---------+-------+------+------+---------+---------+------+-------|
-| \arcsin | \cosh | \deg | \gcd | \lg     | \ln     | \Pr  | \sup  |
-|---------+-------+------+------+---------+---------+------+-------|
-| \arctan | \cot  | \det | \hom | \lim    | \log    | \sec | \tan  |
-|---------+-------+------+------+---------+---------+------+-------|
-| \arg    | \coth | \dim | \inf | \liminf | \max    | \sin | \tanh |
-|---------+-------+------+------+---------+---------+------+-------|
+*** 数学模式重音符号
+[[./img/shuxuemoshizhongyinfu.jpg]]
+*** 小写希腊字母
+[[./img/xiaoxiexilazimu.jpg]]
+*** 大写希腊字母
+[[./img/daxiexilazimu.jpg]]
+*** 二元关系符
+可以在前面加上\ not来得到其否定形式。
+[[./img/eryuanguanxifu.jpg]]
+*** 二元运算符
+[[./img/eryuanyunsuanfu.jpg]]
+*** 大尺寸运算符
+[[./img/dachicunyunsuanfu.jpg]]
+*** 箭头
+[[./img/jiantou.jpg]]
+*** 定界符
+[[./img/dingjiefu.jpg]]
+*** 大尺寸定界符
+[[./img/dachicundingjiefu.jpg]]
+*** 其他符号
+[[./img/qitafuhao.jpg]]
+*** 非数学符号
+[[./img/feishuxuefuhao.jpg]]
+*** AMS定界符
+[[./img/amsdingjiefu.jpg]]
+*** AMS希腊和希伯来字母
+[[./img/amsxilahexibolaizimu.jpg]]
+*** AMS二元关系符
+[[./img/amseryuanguanxifu.jpg]]
+*** AMS箭头
+[[./img/amsjiantou.jpg]]
+*** AMS二元否定关系符和箭头
+[[./img/amseryuanfoudingguanxifuhejiantou.jpg]]
+*** AMS二元运算符
+[[./img/amseryuanyunsuanfu.jpg]]
+*** AMS其他符号
+[[./img/amsqitafuhao.jpg]]
+*** 微积分符号
+1. \(\int_{0}^{n}\)
+2. \(\sum_{i=0}^{n}\)
+3. \(\sum\limits_{i=0}^{n}\)
+4. \(\mathrm{d}x\)
 * keil
 - 设置emacs编辑器：在Customer Tools Menu菜单中，Command设置emacs路径，在Argument中!E代表编辑当前文件；在Menu Content中新
   建个命令emacs(&E), 括号里面的代表快捷键.
